# VulkanQuake

./: .gitignore  CMakeLists.txt  README.md  dedup.py  readme
data/: pak0.pak
shaders/: mesh.frag  mesh.vert  model.frag  model.vert  ui.frag  ui.vert
src/: AliasModel.cpp  AliasModel.hpp  BspFormat.hpp  Camera.cpp  Camera.hpp  Console.cpp  Console.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  GpuBuffer.cpp  GpuBuffer.hpp  GpuImage.cpp  GpuImage.hpp  Map.cpp  Map.hpp  MdlFormat.hpp  Physics.cpp  Physics.hpp  PipelineSetup.cpp  PipelineSetup.hpp  Player.cpp  Player.hpp  ProgsFormat.hpp  RenderEntity.cpp  RenderEntity.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  UI.hpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp  VirtualMachine.cpp  VirtualMachine.hpp  Window.cpp  Window.hpp  main.cpp  vk_mem_alloc.cpp
